--- a/style.css
+++ b/style.css
@@ -9,8 +9,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #222299;
-    background-color: #ffffff;
+    color: #080844;
+    background-color: #999999;
+}
+
+header {
+    background-color: #080844;
+    color: #ffffff;
+    height: 50px;
+    width: 100%;
 }
 
 h1 {
@@ -22,7 +29,7 @@ form {
 }
 
 footer {
-    background-color: #333399;
+    background-color: #080808;
     color: #ffffff;
     display: flex;
     flex-direction: row;
@@ -31,6 +38,33 @@ footer {
     bottom: 0;
     height: 40px;
     width: 100%;
+}
+
+.header_div {
+    display: flex;
+    flex-direction: row;
+}
+
+.header_logo {
+    height: 120px;
+    margin-left: 20px;
+    z-index: 999;
+}
+
+.header_links {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+}
+
+.list_links {
+    margin-left: 50px;
+}
+
+.line_red {
+    background-color: #b60333;
+    width: 100%;
+    height: 5px;
 }
 
 .form_infos {
@@ -48,5 +82,5 @@ footer {
     margin-bottom: 20px;
     border-style: none;
     border-radius: 10px;
-    background-color: #dddddd;
+    background-color: #ffffff;
 }
